# flutter_app

./: .gitignore
api/: Dockerfile  main.py  pyproject.toml  sqlc.yaml  tutorial.db
api/lib/: face_diff.py  mosaic.py
api/src/: main.py
api/src/assets/images/: pubspec.yaml
api/src/assets/images/.dart_tool/: package_config.json  package_config_subset
api/src/authors/: models.py  query.py
api/src/lib/: extract_text_list_from_image.py
api/src/lib/auth/: index.py  initialize.py
api/src/lib/mosaic_face/: face_diff.py  index.py
cli/: go.mod  go.sum  main.go  mosaic_app
mobile/: .gitignore  README.md  pubspec.yaml
mobile/android/: build.gradle
mobile/android/app/: build.gradle  google-services.json
mobile/android/app/src/debug/: AndroidManifest.xml
mobile/android/app/src/main/: AndroidManifest.xml
mobile/android/app/src/main/kotlin/com/example/mobile2/: MainActivity.kt
mobile/android/app/src/main/kotlin/com/example/myapp/: MainActivity.kt
mobile/ios/: firebase_app_id_file.json
mobile/ios/Runner/: GoogleService-Info.plist  Info.plist
mobile/ios/Runner.xcodeproj/: project.pbxproj
mobile/lib/: home.dart  main.dart
mobile/lib/models/: image_model.dart  photo.dart  picture.dart
mobile/lib/providers/: user.dart
mobile/lib/screens/: device_photos_screen.dart  device_pictures_screen.dart  home_page.dart  home_upload_pictures_screen.dart  my_home_page.dart  photo_edit_screen.dart  upload_pictures_screen.dart
mobile/lib/screens/home/: my_home_page.dart
mobile/lib/services/: google_auth.dart  network_service.dart
mobile/lib/widgets/: bottom_navigation_widget.dart  grid_photos_widget.dart  grid_pictures_widget.dart  home_bottom_navigation_widget.dart  image_upload_widget.dart
mobile/macos/: firebase_app_id_file.json
mobile/macos/Flutter/: GeneratedPluginRegistrant.swift
mobile/macos/Runner/: GoogleService-Info.plist  Release.entitlements
mobile/macos/Runner.xcodeproj/: project.pbxproj
mobile/test/: widget_test.dart
mobile/web/: manifest.json
