[project]
name = "api"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "tatsuyafukui", email = "nakedtatsuya@gmail.com" }
]
dependencies = [
    "flask>=3.0.0",
    "opencv-python>=4.8.1.78",
]
readme = "README.md"
requires-python = ">= 3.8"

[tool.rye.scripts]
start = "python src/api/__init__.py"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true
