[project]
name = "api"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "tatsuyafukui", email = "nakedtatsuya@gmail.com" }
]
dependencies = [
    "opencv-python>=4.8.1.78",
    "insightface>=0.7.3",
    "easyocr>=1.7.1",
    "numpy>=1.24.4",
    "onnxruntime>=1.16.3",
    "fastapi>=0.106.0",
    "uvicorn[standard]>=0.25.0",
    "pydantic>=2.5.3",
    "python-multipart>=0.0.6",
]
readme = "README.md"
requires-python = ">= 3.8"

[project.scripts]
hello = "api:hello"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/api"]
