[project]
name = "api"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "tatsuyafukui", email = "nakedtatsuya@gmail.com" }
]
dependencies = [
    "opencv-python>=4.8.1.78",
    "insightface>=0.7.3",
    "easyocr>=1.7.1",
    "numpy>=1.24.4",
    "onnxruntime>=1.16.3",
    "fastapi>=0.106.0",
    "uvicorn[standard]>=0.25.0",
    "pydantic>=2.5.3",
    "python-multipart>=0.0.6",
    "ruff>=0.1.9",
    "mypy>=1.8.0",
    "mangum>=0.17.0",
    "firebase-admin>=6.3.0",
]
readme = "README.md"
requires-python = ">= 3.8"

[project.scripts]
hello = "api:hello"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "pytest>=7.4.3",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/api"]

[tool.mypy]
strict = true
ignore_missing_imports = true
disallow_untyped_decorators = false
disallow_untyped_calls = false

[tool.ruff]
select = [
    "F", # pyflakes
    "E", # pycodestyle
    "W", # pycodestyle warnings
    "I", # isort
    "D", # pydocstyle
]
ignore = []
# 1行の最大文字数
line-length = 88

extend-ignore = [
    "D100",
    "D103",
    "D105", # undocumented-magic-method
    "D107", # undocumented-public-init
    "D205", # blank-line-after-summary
    "D415" # ends-in-punctuation
]

[tool.ruff.lint.pydocstyle]
# docstringをgoogle styleにする
convention = "google"
